# Think-IdeaCapitalMarkets

./: README.md  Think Markets
app/: .wallet-config.json  package.json  wallet-integration-guide.md
app/src/: App.tsx
app/src/components/: CommentSection.tsx  CreateIdeaForm.tsx  Filters.tsx  IdeaCard.tsx  Marketplace.tsx  Profile.tsx  SearchBar.tsx  Sidebar.tsx  WalletConnector.tsx
app/src/utils/: ai.ts  eth.ts  solana.ts
backend/: package.json
backend/src/: index.js
backend/src/utils/: ai.py
contracts/solana/src/instructions/: tokenize_idea.rs
integrations/: multi-chain-setup.ts  test-wallet-integration.ts
mobile/: package.json
programs/goodidea/: Anchor.toml  Cargo.toml
programs/goodidea/src/: lib.rs
programs/goodidea/src/accounts/: idea.rs  verified_creator.rs
programs/goodidea/src/instructions/: buy_idea.rs  list_idea.rs  mint_idea.rs  verify_creator.rs
scripts/: deploy.ts
tests/: goodidea.ts
