[package]
name = "goodidea"
version = "0.1.0"
description = "Decentralized Marketplace for Ideas"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "goodidea"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
mpl-token-metadata = { version = "4.1.0", features = ["no-entrypoint"] }
solana-program = "1.18.0"
